--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -73,6 +73,14 @@ $messages--status: $primary-color;
 $messages--warning: $light-yellow;
 $messages--error: $red;
 
+/* BREAKPOINTS SETTINGS
+ ----------------------------------------------------------------------------------
+ - comments
+ ---------------------------------------------------------------------------------- */
+$sm-breakpoint: 800px;
+$md-breakpoint: 1100px;
+$lg-breakpoint: 1300px;
+
 /* VERTICAL SPACING
  ----------------------------------------------------------------------------------
  - comments
