--- a/src/templates/pages/work/brunello.html
+++ b/src/templates/pages/work/brunello.html
@@ -1,15 +1,15 @@
 ---
-title: Bally Ribbon Mills
-description: Site Design and Build
+title: Brunello.com
+description: Component Based Site-building
 attribution: Work done at Brunello, Inc.
 last-edit: 5.30.19
 team:   
 -
   name: Adam Hoyle
-  title: Project Manager
-- 
+  title: Partner
+-
   name: Kyle Langford
-  title: Designer, Drupal Developer
+  title: Designer / Developer
 ---
 
 {{> header}}
@@ -18,7 +18,7 @@ team:
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
       <article class="content">
-        <h4>Can you tell me again what you do?</h4>
+        <h4>Component Based Sitebuilding</h4>
 
         <p>
           One of my first design projects at Brunello was for a company that
