--- a/src/templates/pages/work/cpl.html
+++ b/src/templates/pages/work/cpl.html
@@ -1,6 +1,15 @@
 ---
 title: Cambridge Public Library
 description: Wayfinding and Signage
+attribution: Work done at Wojciechowski Design
+last-edit: 5.30.19
+team:   
+-
+  name: Tom Wojciechowski
+  title: Principal designer
+-
+  name: Kyle Langford
+  title: Project Designer
 ---
 
 {{> header}}
@@ -85,14 +94,8 @@ description: Wayfinding and Signage
           <div class="caption">Garage entrance</div>
         </div>
 
-        <div class="credits">
-          <p class="attribution">Work done at Wojciechowski Design</p>
-          <ul class="team-list">
-            <li>Kyle Langford: Project Designer</li>
-            <li>Tom Wojciechowski: Principal designer</li>
-          </ul>
-          <p class="last-edit">Last Edit: 5.30.19</p>
-        </div>
+        {{> credits}}
+
       </article>
     </div>
   </div>
