--- a/src/templates/pages/work/hle.html
+++ b/src/templates/pages/work/hle.html
@@ -1,6 +1,21 @@
 ---
 title: Healthly Living Engine
 description: Multisite Theming
+attribution: Work done at Brunello, Inc.
+last-edit: 5.30.19
+team:   
+-
+  name: Adam Hoyle
+  title: Partner
+-
+  name: Jason Fournier
+  title: UI Designer
+-
+  name: Kyle Langford
+  title: UX Designer, Front-End Developer
+-
+  name: Mike Calebrese
+  title: Drupal Developer
 ---
 
 {{> header}}
@@ -9,7 +24,84 @@ description: Multisite Theming
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
       <article class="content">
-        <h4>Design System</h4>
+        <h4>Content Hub</h4>
+
+
+        <div class="specimen stretch">
+          <img
+            src="../assets/img/projects/hle/hle_diagram.jpg"
+            alt="Elephant at sunset"
+            class="paper"
+          />
+          <div class="caption">Infographic - Kyle Langford</div>
+        </div>
+
+        <div class="specimen stretch">
+          <img
+            src="../assets/img/projects/hle/hw-devices.jpg"
+            alt="Elephant at sunset"
+            class="paper"
+          />
+          <div class="caption">Sketch of Idea</div>
+        </div>
+
+        <div class="specimen">
+          <img
+            src="../assets/img/projects/hle/plansite-moodboard.jpg"
+            alt="Elephant at sunset"
+            class="paper"
+          />
+          <div class="caption">Sketch of Idea</div>
+        </div>
+
+
+        <div class="specimen">
+          <img
+            src="../assets/img/projects/hle/ibx.jpg"
+            alt="Elephant at sunset"
+            class="paper"
+          />
+          <div class="caption">Sketch of Idea</div>
+        </div>
+
+
+        <div class="specimen stretch">
+          <div class="stack">
+            <img
+              src="../assets/img/projects/hle/content-inventory-plansites_V4-1.jpg"
+              alt="Elephant at sunset"
+            />
+            <img
+              src="../assets/img/projects/hle/content-inventory-plansites_V4-2.jpg"
+              alt="Elephant at sunset"
+            />
+            <img
+              src="../assets/img/projects/hle/content-inventory-plansites_V4-3.jpg"
+              alt="Elephant at sunset"
+            />
+            <img
+              src="../assets/img/projects/hle/content-inventory-plansites_V4-4.jpg"
+              alt="Elephant at sunset"
+            />
+            <img
+              src="../assets/img/projects/hle/content-inventory-plansites_V4-5.jpg"
+              alt="Elephant at sunset"
+            />
+            <img
+              src="../assets/img/projects/hle/content-inventory-plansites_V4-6.jpg"
+              alt="Elephant at sunset"
+            />
+
+          </div>
+          <div class="caption">
+            I created this Content Inventory &mdash; to show at a block
+            level the heirarchy of information for the page. We created a
+            list of all possible blocks and used that to scaffold out all
+            the page types. Types were assigned to blocks of similar
+            functionality to display placements.
+          </div>
+        </div>
+
 
         <p>
           <strong>Drupal Multisite</strong>
