--- a/src/templates/pages/work/mena.html
+++ b/src/templates/pages/work/mena.html
@@ -1,6 +1,15 @@
 ---
 title: Mass. Emergency Nurse Association
 description: Site Design and Build
+attribution: Work done at Raskyl
+last-edit: 5.30.19
+team:
+-
+  name: Kyle Langford
+  title: Designer, Drupal Developer
+-
+  name: Rachel Sorkin
+  title: Designer
 ---
 
 {{> header}}
@@ -57,14 +66,7 @@ description: Site Design and Build
           >
         </div>
 
-        <div class="credits">
-          <p class="attribution">Work done at Raskyl</p>
-          <ul class="team-list">
-            <li>Kyle Langford: Designer, Developer</li>
-            <li>Rachel Sorkin: Project Manager</li>
-          </ul>
-          <p class="last-edit">Last Edit: 5.30.19</p>
-        </div>  
+        {{> credits}}
       </article>
     </div>
   </div>
