--- a/src/scss/_everhood.scss
+++ b/src/scss/_everhood.scss
@@ -11,6 +11,7 @@ body {
   }
 
   &.tween {
+    // on load
     opacity: 1;
     transition: all 0.7s ease-in;
 
@@ -28,7 +29,8 @@ body {
     }
   }
 
-  &.page--index {
+  &.page--index,
+  &.page--all {
     .container {
       background-color: #5e6bb8;
     }
@@ -50,111 +52,56 @@ body {
   }
 }
 
-.mast-head {
-  position: fixed;
-  width: 100%;
-  height: 6.5em;
-  font-family: $sans-serif;
-  z-index: 9999;
+// .mast-head {
+//   position: fixed;
+//   width: 100%;
+//   height: 6.5em;
+//   font-family: $sans-serif;
+//   z-index: 9999;
 
-  h1 {
-    display: inline;
-    margin: 0;
-    position: relative;
-    left: -200px;
-  }
+//   h1 {
+//     display: inline;
+//     margin: 0;
+//     position: relative;
+//     left: -200px;
+//   }
+// }
+
+// .site-logo {
+//   position: absolute;
+//   top: 1.25em;
+//   left: 1.25em;
+//   color: #999;
+//   font-size: 1.6rem;
+//   z-index: 9999;
+//   padding-left: 1.2em;
+//   width: 300px;
+// }
+
+// Custom Colors
+.wisteria {
+  color: #8e44ad;
 }
 
-.site-logo {
-  position: absolute;
-  top: 1.25em;
-  left: 1.25em;
-  color: #999;
-  font-size: 1.6rem;
-  z-index: 9999;
-  padding-left: 1.2em;
-  width: 300px;
+.belize {
+  color: #2980b9;
 }
 
-// Navigation
-nav {
-  &.primary {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    opacity: 0;
-    z-index: -1;
-    display: none;
-
-    // Overlay
-    &.overlay {
-      transition: opacity 0.5s ease-in;
-      display: table;
-      opacity: 1;
-      z-index: 999;
-
-      .container {
-        background: #f27181;
-        display: table-cell;
-        padding: 0;
-        vertical-align: middle;
-      }
-    }
-
-    ul {
-      // width: 100vw;
-      text-align: center;
-      font-size: 3em;
-
-      a {
-        color: $future-yellow;
-      }
-    }
-  }
+.pomegranate {
+  color: #c0392b;
 }
 
-// Button
-button {
-  // Default
-  // border-radius: $border-radius;
-  line-height: 1.6;
-  padding: 0.6em 1em;
-  font-size: 1rem;
-  outline: none;
-  border: 0;
+.green {
+  color: #16a085;
+}
 
-  &.primary-menu-btn {
-    color: #52dfb4;
-    position: absolute;
-    padding: 1em 1.75em;
-    // top: 2em;
-    // right: 22px;
-    left: -23px;
-    width: 100%;
-    text-align: right;
-    z-index: 99999;
-    background-color: rgba(0, 0, 0, 0.16);
-    -webkit-transform: scale(1, 1.05) skew(-8deg, 0deg);
-    -ms-transform: scale(1, 1.05) skew(-8deg, 0deg);
-    transform: scale(1, 1.05) skew(-45deg, 0deg);
-    display: block;
-    line-height: 100%;
-
-    letter-spacing: 2px;
-    font-size: 18px;
-    font-weight: bold;
-    cursor: pointer;
-    // border-radius:$border-radius;
-  }
-
-  &.active {
-    background-color: rgba(200, 200, 200, 0.32);
-  }
+.midnight {
+  color: #2c3e50;
 }
 
 // Custom Layout
 .container {
-  $height: 90vh;
+  $height: 80vh;
 
   &.intro {
     background-color: $twilight;
@@ -182,8 +129,7 @@ button {
   }
 
   &.portfolio {
-    // background-color: $twilight;
-    // background-color: #8aa8b8;
+    background-color: #5e6bb8;
     color: $cyber-green;
     height: $height;
     text-align: left;
@@ -302,138 +248,6 @@ button {
   }
 }
 
-.page--bookmarks {
-}
-// Custom Page
-.page__logo {
-  margin: 2em auto;
-  max-width: 200px;
-  display: block;
-}
-
-.page__title {
-  font-size: 58px;
-  color: #50e3c2;
-  margin-bottom: 8px;
-  letter-spacing: 0.05rem;
-}
-
-.page__sub-title {
-  font-size: 24px;
-}
-
-.section__title {
-  font-size: em(40);
-  margin-bottom: g(3);
-
-  color: $future-yellow;
-
-  &.text--display {
-    color: $future-yellow;
-  }
-}
-
-.text--display {
-  font-family: $sans-serif-2;
-  font-size: em(88);
-  color: $pink;
-  line-height: 1.2;
-
-  strong {
-    margin-left: -6px;
-  }
-}
-
-.list-title {
-  color: $future-yellow;
-  font-size: 80%;
-  text-transform: uppercase;
-  font-weight: bold;
-}
-
-// Special Classes
-.position-bottom-right {
-  position: absolute;
-  bottom: 2em;
-  right: 0;
-}
-
-.position-top-left {
-  position: absolute;
-  top: 2em;
-  left: $page-margin--mobile;
-
-  @include media($sm-breakpoint) {
-    top: 4em;
-    left: $page-margin--tablet;
-  }
-}
-
-.title-image {
-  max-width: 260px;
-  width: 100%;
-}
-
-.icon-image {
-  max-width: 50%;
-  width: 100%;
-  opacity: 0.15;
-}
-
-// Special Colors
-.wisteria {
-  color: #8e44ad;
-}
-
-.belize {
-  color: #2980b9;
-}
-
-.pomegranate {
-  color: #c0392b;
-}
-
-.green {
-  color: #16a085;
-}
-
-.midnight {
-  color: #2c3e50;
-}
-
-.card {
-  // padding: $base-spacing;
-  // border-radius: 4px;
-  height: 100%;
-  // color: white;
-  padding: 32px;
-  background: white;
-  border-width: 16px;
-  border-bottom-color: #3333;
-  border-right-color: #3333;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-  border-top-right-radius: 0;
-  border-style: solid;
-  border-top: none;
-  // box-shadow: 2px 2px 6px;
-  border-left: none;
-
-  // &:hover {
-  //   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.35);
-  // }
-
-  &:after {
-    content: '';
-    display: block;
-    position: absolute;
-  }
-
-  a {
-    // color: white;
-  }
-}
-
 ul.bookmarks {
   margin-bottom: $base-spacing * 2;
 
@@ -516,10 +330,6 @@ ul.blog {
   padding: 4px;
   border: 3px solid transparent;
 
-  // &:hover {
-  //   color: darken(inherit, 15%);
-  // }
-
   &:focus {
     padding: 4px;
     border: 3px solid;
@@ -531,10 +341,26 @@ ul.blog {
   }
 }
 
-.button-group {
-  margin-bottom: g(6);
+/* Custom Positioning Classes */
+.position-bottom-right {
+  position: absolute;
+  bottom: 2em;
+  right: 0;
+  pointer-events: none;
 }
 
+.position-top-left {
+  position: absolute;
+  top: 2em;
+  left: $page-margin--mobile;
+
+  @include media($sm-breakpoint) {
+    top: 4em;
+    left: $page-margin--tablet;
+  }
+}
+
+/* Custom Styling for Contact Container */
 .contact {
   a {
     color: $cyber-green;
@@ -549,22 +375,46 @@ ul.blog {
   }
 }
 
-.list__item {
-  position: relative;
+// Custom Page
+.page__logo {
+  margin: 2em auto;
+  max-width: 200px;
+  display: block;
 }
 
-.icon-list {
-  position: absolute;
-  left: -20px;
-  padding-top: 4px;
+.page__title {
+  font-size: 58px;
+  color: #50e3c2;
+  margin-bottom: 8px;
+  letter-spacing: 0.05rem;
 }
 
-.gold-star {
-  color: #ffd700;
+.page__sub-title {
+  font-size: 24px;
 }
 
-.blue-drupal {
-  color: #0678be;
+.section__title {
+  font-size: em(40);
+  margin-bottom: g(3);
+
+  color: $future-yellow;
+
+  &.text--display {
+    color: $future-yellow;
+  }
+}
+
+.text--display {
+  font-family: $sans-serif-2;
+  font-size: em(88);
+  color: $pink;
+  line-height: 1.2;
+
+  strong {
+    margin-left: -6px;
+    position: relative;
+    display: block;
+  }
 }
 
 .text--center {
@@ -572,155 +422,20 @@ ul.blog {
 }
 
 .text--large {
-  font-size: 16px;
+  font-size: em(16);
 
   @include media($sm-breakpoint) {
-    font-size: 24px;
+    font-size: em(24);
   }
 }
 
-.content {
-  font-size: 16px;
+.title-image {
+  max-width: 260px;
   width: 100%;
-
-  @include media($md-breakpoint) {
-    max-width: 756px;
-  }
 }
 
-.specimen {
-  margin-bottom: g(6);
-  text-align: center;
-
-  &.stretch {
-    @include media($md-breakpoint) {
-      margin-left: -10vw;
-      margin-right: -10vw;
-    }
-  }
+.icon-image {
+  max-width: 50%;
+  width: 100%;
+  opacity: 0.15;
 }
-
-.caption {
-  text-align: left;
-  font-size: 16px;
-  margin: 8px 0;
-  // padding-left: 5vw;
-}
-
-.attribution {
-  font-size: 16px;
-}
-.last-edit {
-  font-size: 16px;
-}
-.stack {
-  background: #fff;
-  box-shadow:
-    /* The top layer shadow */ 0 1px 1px rgba(0, 0, 0, 0.15),
-    /* The second layer */ 0 10px 0 -5px #eee,
-    /* The second layer shadow */ 0 10px 1px -4px rgba(0, 0, 0, 0.15),
-    /* The third layer */ 0 20px 0 -10px #eee,
-    /* The third layer shadow */ 0 20px 1px -9px rgba(0, 0, 0, 0.15);
-  padding: g(2);
-}
-
-.paper {
-  background: #fff;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
-  padding: 8px;
-  // width: 100%;
-}
-
-.video-player {
-  margin-bottom: g(6);
-}
-
-// input[type='range'] {
-//   height: 25px;
-//   -webkit-appearance: none;
-//   margin: 10px 0;
-//   width: 100%;
-// }
-// input[type='range']:focus {
-//   outline: none;
-// }
-// input[type='range']::-webkit-slider-runnable-track {
-//   width: 100%;
-//   height: 5px;
-//   cursor: pointer;
-//   animate: 0.2s;
-//   box-shadow: 0px 0px 0px #000000;
-//   background: #2497e3;
-//   border-radius: 1px;
-//   border: 0px solid #000000;
-// }
-// input[type='range']::-webkit-slider-thumb {
-//   box-shadow: 0px 0px 0px #000000;
-//   border: 1px solid #2497e3;
-//   height: 18px;
-//   width: 18px;
-//   border-radius: 25px;
-//   background: #a1d0ff;
-//   cursor: pointer;
-//   -webkit-appearance: none;
-//   margin-top: -7px;
-// }
-// input[type='range']:focus::-webkit-slider-runnable-track {
-//   background: #2497e3;
-// }
-// input[type='range']::-moz-range-track {
-//   width: 100%;
-//   height: 5px;
-//   cursor: pointer;
-//   animate: 0.2s;
-//   box-shadow: 0px 0px 0px #000000;
-//   background: #2497e3;
-//   border-radius: 1px;
-//   border: 0px solid #000000;
-// }
-// input[type='range']::-moz-range-thumb {
-//   box-shadow: 0px 0px 0px #000000;
-//   border: 1px solid #2497e3;
-//   height: 18px;
-//   width: 18px;
-//   border-radius: 25px;
-//   background: #a1d0ff;
-//   cursor: pointer;
-// }
-// input[type='range']::-ms-track {
-//   width: 100%;
-//   height: 5px;
-//   cursor: pointer;
-//   animate: 0.2s;
-//   background: transparent;
-//   border-color: transparent;
-//   color: transparent;
-// }
-// input[type='range']::-ms-fill-lower {
-//   background: #2497e3;
-//   border: 0px solid #000000;
-//   border-radius: 2px;
-//   box-shadow: 0px 0px 0px #000000;
-// }
-// input[type='range']::-ms-fill-upper {
-//   background: #2497e3;
-//   border: 0px solid #000000;
-//   border-radius: 2px;
-//   box-shadow: 0px 0px 0px #000000;
-// }
-// input[type='range']::-ms-thumb {
-//   margin-top: 1px;
-//   box-shadow: 0px 0px 0px #000000;
-//   border: 1px solid #2497e3;
-//   height: 18px;
-//   width: 18px;
-//   border-radius: 25px;
-//   background: #a1d0ff;
-//   cursor: pointer;
-// }
-// input[type='range']:focus::-ms-fill-lower {
-//   background: #2497e3;
-// }
-// input[type='range']:focus::-ms-fill-upper {
-//   background: #2497e3;
-// }
