--- a/src/scss/components/_article.scss
+++ b/src/scss/components/_article.scss
@@ -1,5 +1,7 @@
 /* Article Styling
 
+Display Modes
+
 content-full
 content-teaser
 
@@ -9,63 +11,13 @@ article {
   width: 100%;
   max-width: 700px;
   margin: 0px auto;
-  // padding: 0 48px;
   position: relative;
 
   @include media($sm-breakpoint) {
     padding: 0;
-    // padding: 0 48px;
   }
 
-  &.collapse {
-    padding: 0;
-    margin: 0;
-  }
-
-  .dark-mode & {
-    p {
-      color: white;
-    }
-
-    p:first-child:first-letter {
-      color: #ededed;
-    }
-  }
-
-  @media (prefers-dark-interface) {
-    p {
-      color: pink;
-    }
-
-    p:first-child:first-letter {
-      color: #ededed;
-    }
-  }
-
-  &.knockout {
-    h2,
-    h3,
-    p {
-      color: white;
-    }
-  }
-
-  &.justify {
-    text-align: justify;
-  }
-
-  .item {
-    margin-bottom: 12em;
-  }
-
-  .description {
-    text-align: left;
-  }
-
-  time {
-    color: #c43456;
-  }
-
+  // Reserved for page title
   h1 {
     color: #5e6bb8;
   }
@@ -88,6 +40,12 @@ article {
     margin-bottom: 1em;
   }
 
+  h4 {
+  }
+
+  h5 {
+  }
+
   p {
     font-family: $sans-serif-2;
     font-weight: 400;
@@ -100,21 +58,34 @@ article {
   }
 }
 
-.message {
-  margin-top: 3em;
-  font-family: $serif;
+.view-teaser {
+}
+.view-full {
 }
 
-.dropcap {
-  // p:first-child:first-letter {
-  color: #e53b56;
-  color: #212121;
-  float: left;
-  font-family: Georgia;
-  font-size: 3.25em;
-  line-height: 0.8;
-  padding-top: 4px;
-  padding-right: 8px;
-  padding-left: 3px;
-  // }
+// Max Line Length
+.content {
+  font-size: 16px;
+  width: 100%;
+
+  @include media($md-breakpoint) {
+    max-width: 756px;
+  }
+}
+
+.date {
+}
+
+.author {
+}
+
+footer.credits,
+.credits {
+  .attribution {
+    font-size: 16px;
+  }
+
+  .last-edit {
+    font-size: 16px;
+  }
 }
