--- a/src/templates/layouts/default.html
+++ b/src/templates/layouts/default.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="{{root}}assets/css/styles.css" />
 
     <!-- Modernizr - Load after CSS -->
-    <!-- <script src="js/modernizr-2.8.3-respond-1.4.2.min.js"></script> -->
+    <!-- <script src="js/modernizr-custom.js"></script> -->
 
     <noscript><style type="text/css">
         body { opacity: 1; }
