--- a/src/templates/pages/articles/all.html
+++ b/src/templates/pages/articles/all.html
@@ -12,7 +12,7 @@ catergoy: blog
     <div class="column two-thirds">
       <ul class="list blog">
         <li class="list__item">
-          <article>
+          <article class="view--teaser">
             <a href="/articles/alt-text.html">
               <h2 class="label">Putting Accessiblity in the Users hands</h2>
             </a>
@@ -25,7 +25,7 @@ catergoy: blog
         </li>
 
         <li class="list__item">
-          <article>
+          <article class="view--teaser">
             <a href="/articles/article.html">
               <h2 class="label">Putting Accessiblity in the Users hands</h2>
             </a>
@@ -37,7 +37,7 @@ catergoy: blog
           </article>
         </li>
         <li class="list__item">
-          <article>
+          <article class="view--teaser">
             <a href="/articles/article.html">
               <h2 class="label">Putting Accessiblity in the Users hands</h2>
             </a>
