--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -3,12 +3,18 @@ title: Web Design and Development | Kyle Langford
 description: My name is Kyle Langford, and this is my Web Design and Development portfolio.
 ---
 
+{{> masthead}}
+
 <header class="container intro masthead">
   <div class="row flex flex-align--center flex--justify fill-height">
     <!-- 1.0 - Intro Name -->
     <div class="column half text--center">
+      <img
+        src="assets/img/svg/laptop.svg"
+        class="title-image"
+      />
       <h1 class="page__title">Kyle Langford</h1>
-      <h2 class="page__sub-title">Designer and Web Developer</h2>
+      <h2 class="page__sub-title">Web Design and Development</h2>
       <p class="description">Boston, MA</p>
     </div>
   </div>
@@ -21,7 +27,7 @@ description: My name is Kyle Langford, and this is my Web Design and Development
       <h2 class="section__title">Digital Craftsman</h2>
 
       <p class="text--large">
-        I work as a Designer and Web Developer for a Boston based agency. I
+        I work as a UX Designer and Web Developer for a Boston based agency. I
         have 10 years of professional experience and entrepreneurship. I
         find motivation in helping people use technology. I focus on
         designing simple interfaces and writing clean human-readable code. I
@@ -43,20 +49,27 @@ description: My name is Kyle Langford, and this is my Web Design and Development
   <!-- 2.0 - User Interface Design  -->
   <header class="row pad-default">
     <div class="column">
-      <div class="text--display"><strong>UI</strong></div>
+      <div class="text--display"><strong>Design</strong></div>
       <p>Modern. Simple. Human.</p>
     </div>
   </header>
   <!-- 2.1 - Capabilities -->
   <div class="row flex pad-default">
     <div class="column one-fourth animate fade-in">
-      <p class="list-title">Capabilities</p>
+      <p class="list-title">Interface Design</p>
       <ul class="pretty">
-        <li>Pattern Library</li>
-        <li>Information Architecture</li>
+        <li>Component Design</li>
         <li>Responsive Web Design</li>
-        <li>Sitemaps</li>
         <li>Wireframing</li>
+      </ul>
+    </div>
+    <div class="column one-fourth animate fade-in">
+      <!-- 3.1 - Capabilities  -->
+      <p class="list-title">Experience Design</p>
+      <ul class="pretty">
+        <li>Accessibility</li>
+        <li>Information Architecture</li>
+        <li>Wayfinding</li>
       </ul>
     </div>
     <!-- 2.2 - Design Tools -->
@@ -65,20 +78,12 @@ description: My name is Kyle Langford, and this is my Web Design and Development
       <ul class="pretty">
         <li>Adobe Photoshop</li>
         <li>Adobe Illustrator</li>
-        <li>Chrome Developer Tools</li>
+        <li>Balsamiq</li>
+        <li>Invision App</li>
         <li>Sketch</li>
       </ul>
     </div>
-    <div class="column one-fourth animate fade-in">
-      <!-- 3.1 - Capabilities  -->
-      <p class="list-title">Experience Design</p>
-      <ul class="pretty">
-        <li>Accessibility</li>
-        <li>Analytics</li>
-        <li>A/B Testing</li>
-        <li>User Feedback</li>
-      </ul>
-    </div>
+
   </div>
 </section>
 
@@ -86,7 +91,7 @@ description: My name is Kyle Langford, and this is my Web Design and Development
   <!-- 4.0 - Frontend Development  -->
   <header class="row flex--inline  pad-default">
     <div class="column">
-      <div class="text--display"><strong>FE</strong></div>
+      <div class="text--display"><strong>Dev<span class="hide--for-mobile">elopment</span></strong></div>
       <!-- <p>Design systems, not pages.</p> -->
       <p>Plan. Implement. Iterate.</p>
     </div>
@@ -97,12 +102,10 @@ description: My name is Kyle Langford, and this is my Web Design and Development
     <div class="column one-fourth animate fade-in">
       <p class="list-title">Capabilities</p>
       <ul class="pretty">
-        <li>HTML Prototyping</li>
-        <li>Solutions Planning</li>
-        <li>Design Systems</li>
+        <li>CMS Theming</li>
+        <li>Frontend Development</li>
+        <li>Prototyping</li>
         <li>Website Development</li>
-        <li>Site Performance</li>
-        <li>Workflow Automation</li>
       </ul>
     </div>
 
@@ -111,9 +114,10 @@ description: My name is Kyle Langford, and this is my Web Design and Development
       <p class="list-title">Core</p>
       <ul class="pretty">
         <li>HTML / CSS</li>
-        <li>Javascript ES6</li>
+        <li>JavaScript</li>
         <li>Gulp.js / NPM</li>
-        <li>Version Control: Git</li>
+        <li>Git</li>
+        <li>LAMP</li>
       </ul>
     </div>
 
@@ -173,21 +177,29 @@ description: My name is Kyle Langford, and this is my Web Design and Development
       <ul class="pretty">
         <li class="list__item">
           <a href="/bookmarks"
-            ><span class="icon-list icons-bookmark"> </span>Bookmarks</a
+            ><span class="icon-list icons-bookmark"></span>Bookmarks</a
           >
         </li>
-<!--         <li class="list__item">
+        <li class="list__item">
           <a href="/work/all"
             ><span class="icon-list icons-lock"></span>Portfolio</a
           >
         </li>
         <li class="list__item">
-          <a href="/assets/resume/klangford_2019.pdf"
+          <a href="/assets/resume/klangford_2020.pdf"
             ><span class="icon-list icons-download-cloud"></span>Resume</a
           >
-        </li> -->
+        </li>
       </ul>
     </div>
+
+    <figure class="image">
+      <img
+        src="assets/img/svg/sunglasses.svg"
+        class="icon-image position-bottom-right"
+      />
+    </figure>
+
   </div>
 
 </section>
