--- a/src/templates/pages/work/all.html
+++ b/src/templates/pages/work/all.html
@@ -14,39 +14,103 @@
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
       <ul class="list portfolio">
-        <li class="list__item">
-          <a href="/work/brm">
-            <span class="label">Bally Ribbon Mills</span>
-            <p>Site design and Drupal build.</p>
-          </a>
+        <li class="list__item animate fade-in">
+          <article class="view--teaser">
+            <a href="/work/brm">
+              <span class="label">Bally Ribbon Mills</span>
+              <p>
+                Site Design and Drupal Development
+              </p>
+            </a>
+          </article>
+        </li>
+        <li class="list__item animate fade-in">
+          <article class="view--teaser">
+            <a href="/work/blink-schedule">
+              <span class="label">Premera B'Link</span>
+              <p>
+              Site Design and Drupal Development
+              </p>
+            </a>
+          </article>
+        </li>
+        <li class="list__item animate fade-in">
+          <article class="view--teaser">
+            <a href="/work/brunello">
+              <span class="label">Brunello.com</span>
+              <p>
+               Site Design and Development
+              </p>
+            </a>
+          </article>
+        </li>
+        <li class="list__item animate fade-in">
+          <article class="view--teaser">
+            <a href="/work/cpl">
+              <span class="label">Cambridge Public Library</span>
+              <p>
+                Enviromental Signage and Wayfinding.
+              </p>
+            </a>
+          </article>
+        </li>
+        <li class="list__item animate fade-in">
+          <article class="view--teaser">
+            <a href="/work/email-builder">
+              <span class="label">Drizly Email Builder</span>
+              <p>
+                Drag and Drop email building tool.
+              </p>
+            </a>
+          </article>
+        </li>
+        <li class="list__item animate fade-in">
+          <article class="view--teaser">
+            <a href="/work/fitnessapp">
+              <span class="label">Elev8d Fitness</span>
+              <p>
+                Angular Video Component and Playlist.
+              </p>
+            </a>
+          </article>
+        </li>
+        <li class="list__item animate fade-in">
+          <article class="view--teaser">
+            <a href="/work/hle">
+              <span class="label">Healthy Living Engine</span>
+              <p>
+                Design and Development for web application. 
+              </p>
+            </a>
+          </article>
         </li>
         <li class="list__item">
-          <a href="/work/cpl">
-            <span class="label">Cambridge Public Library</span>
-            <p>
-              Enviromental Signage and Wayfinding.
-            </p>
-          </a>
+          <article class="view--teaser">
+            <a href="/work/imaginatik">
+              <span class="label">Imaginatik</span>
+              <p>
+                Site Design and Drupal Development
+              </p>
+            </a>
+          </article>
         </li>
-        <li class="list__item">
-          <a href="/work/fitnessapp">
-            <span class="label">Elev8d Fitness</span>
-            <p>
-              Angular Video Component and Playlist.
-            </p>
-          </a>
-        </li>
-        <li class="list__item">
+        <!-- <li class="list__item">
           <a href="/work/mena">
             <span class="label">Mass. Emergency Nurse Association</span>
-            <p>Site design and Drupal build.</p>
+            <p>
+              Site design and Drupal build.
+            </p>
           </a>
-        </li>
+        </li> -->
         <li class="list__item">
-          <a href="/work/paw">
-            <span class="label">Princeton Alumni Magazine</span>
-            <p>Site Design and Drupal build.</p>
-          </a>
+          <article class="view--teaser">
+            <a href="/work/paw">
+              <span class="label">Princeton Alumni Magazine</span>
+              <p>
+                Site Design and Drupal build.
+              </p>
+            </a>
+          </article>
         </li>
       </ul>
     </div>
