--- a/src/templates/pages/work/email-builder.html
+++ b/src/templates/pages/work/email-builder.html
@@ -1,6 +1,15 @@
 ---
-title: B'link
-description: Feature Design
+title: Drizly Email Builder
+description: Web App
+attribution: Work done at Raskyl
+last-edit: 5.30.19
+team:
+-
+  name: Kyle Langford
+  title: Designer, Drupal Developer
+-
+  name: Rachel Sorkin
+  title: Designer
 ---
 
 {{> header}}
@@ -16,50 +25,54 @@ description: Feature Design
           Needed to display topics over a timeline...
         </p>
 
-        <p>
-          <strong>Solution</strong>
-          Needed to display topics over a timeline...
-        </p>
+        <p>I was coding https://drizly.com/ emails for a while and noticed that a lot of the work was repetitive. I proposed that we design a library of blocks based on their existing emails. I boiled the emails down to 10 or so components. I designed a UI for arranging the blocks and populating them with content. This app would render the HTML in a preview panel and also allow you to export the generated HTML.</p>
 
-        <p>
-          <strong>Content</strong>
-          Needed to display topics over a timeline...
-        </p>
-
-        <div class="specimen">
+        <div class="specimen stretch">
           <img
-            src="../assets/img/projects/brm/.jpg"
+            src="../assets/img/projects/drizly/drizly-app-projects.jpg"
             alt="Elephant at sunset"
             class="paper"
           />
           <div class="caption">Sketch of Idea</div>
         </div>
 
-        <div class="specimen">
+        <p> If you click the settings wheel next to a project on the left it will load. The page collapses, but if you click projects at the bottom right it will reopen the left sidebar. Try changing some of the content on the right it renders instantly. The accordions match with the blocks in the preview. You can drag and drop the order in the preview window. The form above the preview lets you add blocks. Feel free to play around.</p>
+
+        <div class="specimen stretch">
           <img
-            src="../assets/img/projects/brm/.jpg"
+            src="../assets/img/projects/drizly/drizly-app-edit.jpg"
             alt="Elephant at sunset"
             class="paper"
           />
           <div class="caption">Design of Idea</div>
         </div>
 
-        <p>
-          <strong>Implementation</strong>
-          Needed to display topics over a timeline...
-        </p>
+        <p>I like this project because I think this one has merit as a standalone product. The work to standardize their designs came out really nice. I also taught myself angularJS. If I had more time I would have made the right sidebar draggable, and made it so you could click and edit the preview directly.</p>
 
-        <p>
-          <strong>Flexbox</strong>
-          Needed to display topics over a timeline...
-        </p>
+        <div class="specimen stretch">
+          <img
+            src="../assets/img/projects/drizly/drizly-app-edit.jpg"
+            alt="Elephant at sunset"
+            class="paper"
+          />
+          <div class="caption">Design of Idea</div>
+        </div>
+
+        <div class="button-group">
+          <a
+            href="https://drizly-app.kylelangford.com"
+            class="button button--primary"
+            target="_blank"
+            >View Demo</a
+          >
+          <p>*Note: some of the images are no longer hosted.</p>
+        </div>
 
         <div class="credits">
-          <p class="attribution">Work done at Brunello, Inc.</p>
+          <p class="attribution">Work done at Raskyl</p>
           <ul class="team-list">
-            <li>Adam Hoyle: Partner</li>
-            <li>Jason Fournier: UX Designer</li>
-            <li>Kyle Langford: UX Developer</li>
+            <li>Kyle Langford: Designer, Developer</li>
+            <li>Rachel Sorkin: Designer</li>
           </ul>
           <p class="last-edit">Last Edit: 5.30.19</p>
         </div>
